--- a/T6/t6.ipynb
+++ b/T6/t6.ipynb
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[ 1.,  1.,  0.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  1.,  0.,  1.,\n         0.,  0.,  1.,  0.,  0.,  0.,  1.],\n       [ 1.,  1., -1.,  1.,  1., -1.,  1.,  1., -1.,  1.,  1., -1.,  1.,\n         1., -1.,  1., -1.,  1., -1.,  1.]])"
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,21 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.   0.  -0.1  0.   0.  -0.1  0.   0.1 -0.1  0.   0.  -0.1  0.   0.1\n",
-      "  -0.1  0.  -0.1  0.1 -0.1  0. ]]\n"
+      "[[-1.23857432e-17  8.95301634e-18 -1.00000000e-01  2.00552466e-17\n",
+      "   2.00552466e-17 -1.00000000e-01  2.00552466e-17  1.00000000e-01\n",
+      "  -1.00000000e-01  2.00552466e-17  2.00552466e-17 -1.00000000e-01\n",
+      "   2.00552466e-17  1.00000000e-01 -1.00000000e-01  2.00552466e-17\n",
+      "  -1.00000000e-01  1.00000000e-01 -1.00000000e-01  2.00552466e-17]] 1\n",
+      "[[ 9.99970001e-07  9.99970001e-07 -9.99980000e-02  9.99970001e-07\n",
+      "   9.99970001e-07 -9.99980000e-02  9.99970001e-07  9.99980000e-02\n",
+      "  -9.99980000e-02  9.99970001e-07  9.99970001e-07 -9.99980000e-02\n",
+      "   9.99970001e-07  9.99980000e-02 -9.99980000e-02  9.99970001e-07\n",
+      "  -9.99980000e-02  9.99980000e-02 -9.99980000e-02  9.99970001e-07]]\n"
      ]
     }
    ],
    "source": [
     "y = np.array([0, 1]).reshape((-1, 1))\n",
     "model = PolyModel(x, y, 3)\n",
-    "print(np.around(model.coefficients(), 1))"
+    "print(model.coefficients(), 1)\n",
+    "model_ridge = PolyModel(x, y, 3, ridge=0.0001)\n",
+    "print(model_ridge.coefficients())"
    ],
    "metadata": {
     "collapsed": false
