--- a/custom/test.ipynb
+++ b/custom/test.ipynb
@@ -6,19 +6,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: dlopen(/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/torchvision/image.so, 6): Symbol not found: __ZN2at4_ops19empty_memory_format4callEN3c108ArrayRefIxEENS2_8optionalINS2_10ScalarTypeEEENS5_INS2_6LayoutEEENS5_INS2_6DeviceEEENS5_IbEENS5_INS2_12MemoryFormatEEE\n",
-      "  Referenced from: /Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/torchvision/image.so\n",
-      "  Expected in: /Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/torch/lib/libtorch_cpu.dylib\n",
-      " in /Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/torchvision/image.so\n",
-      "  warn(f\"Failed to load image Python extension: {e}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -30,20 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
+      "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:67: UserWarning: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
-      "  warning_cache.warn(\n",
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/pytorch_lightning/trainer/configuration_validator.py:108: PossibleUserWarning: You defined a `validation_step` but have no `val_dataloader`. Skipping val loop.\n",
-      "  rank_zero_warn(\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name    | Type       | Params\n",
       "---------------------------------------\n",
@@ -53,9 +38,7 @@
       "0         Non-trainable params\n",
       "139       Total params\n",
       "0.001     Total estimated model params size (MB)\n",
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:224: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n",
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/pytorch_lightning/trainer/trainer.py:1609: PossibleUserWarning: The number of training batches (1) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
+      "C:\\Users\\Li Yong\\anaconda3\\envs\\EE2211\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:1609: PossibleUserWarning: The number of training batches (1) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
       "  rank_zero_warn(\n"
      ]
     },
@@ -65,87 +48,11 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d4ce884ba9424343bc066175dc2633ea"
+       "model_id": "34684c3aaff34a5cad505343b467b4af"
       }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -153,11 +60,12 @@
     "x_train, x_test, y_train, y_test = train_test_split(data[\"data\"], data[\"target\"], test_size=0.5)\n",
     "train_data = TensorDataset(tensor(x_train, dtype=torch.float32), tensor(y_train, dtype=torch.long))\n",
     "test_data = TensorDataset(tensor(x_test, dtype=torch.float32), tensor(y_test, dtype=torch.long))\n",
-    "train_loader = DataLoader(train_data, batch_size=1024, shuffle=True, pin_memory=True)\n",
+    "train_loader = DataLoader(train_data, batch_size=256, shuffle=True, pin_memory=True)\n",
     "test_loader = DataLoader(test_data, batch_size=1024, pin_memory=True)\n",
+    "torch.set_float32_matmul_precision('medium')\n",
     "\n",
     "model = Network(0.001)\n",
-    "trainer = pl.Trainer(max_epochs=-1, auto_lr_find=True, callbacks=[TrainEarlyStopping(monitor=\"train loss\", mode=\"min\")])\n",
+    "trainer = pl.Trainer(max_epochs=-1, auto_lr_find=True, callbacks=[TrainEarlyStopping(monitor=\"train loss\", mode=\"min\")], check_val_every_n_epoch=1, accelerator=\"gpu\", devices=1)\n",
     "trainer.fit(model, train_loader)"
    ],
    "metadata": {
@@ -166,14 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/admin/.conda/envs/EE2211/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:224: PossibleUserWarning: The dataloader, test_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
      ]
     },
     {
@@ -182,25 +89,29 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a5e52aca3fd6473fb6deda474708f8be"
+       "model_id": "24a7649a797e471fa3b2f5ce141cdf63"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n┃\u001B[1m \u001B[0m\u001B[1m       Test metric       \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1m      DataLoader 0       \u001B[0m\u001B[1m \u001B[0m┃\n┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n│\u001B[36m \u001B[0m\u001B[36m        accuracy         \u001B[0m\u001B[36m \u001B[0m│\u001B[35m \u001B[0m\u001B[35m   0.9733333587646484    \u001B[0m\u001B[35m \u001B[0m│\n│\u001B[36m \u001B[0m\u001B[36m        test loss        \u001B[0m\u001B[36m \u001B[0m│\u001B[35m \u001B[0m\u001B[35m   0.25458818674087524   \u001B[0m\u001B[35m \u001B[0m│\n└───────────────────────────┴───────────────────────────┘\n",
-      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n│<span style=\"color: #008080; text-decoration-color: #008080\">         accuracy          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9733333587646484     </span>│\n│<span style=\"color: #008080; text-decoration-color: #008080\">         test loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.25458818674087524    </span>│\n└───────────────────────────┴───────────────────────────┘\n</pre>\n"
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\r\n",
+      "       Test metric             DataLoader 0\r\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\r\n",
+      "        accuracy            0.9866666793823242\r\n",
+      "        test loss           0.1508510708808899\r\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
+     ]
     },
     {
      "data": {
-      "text/plain": "[{'test loss': 0.25458818674087524, 'accuracy': 0.9733333587646484}]"
+      "text/plain": "[{'test loss': 0.1508510708808899, 'accuracy': 0.9866666793823242}]"
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
